# friendly-computing-machine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Tiltfile  alembic.ini  index.yaml  mcp.json  pyproject.toml  run.py  run.sh  setup.py  test_blocks.py  tmp.py  tmp.yaml
.devcontainer/: README.md  devcontainer.json  setup.sh
.github/workflows/: linter_black.yaml  publish.yml  test.yml
charts/friendly-computing-machine/: .helmignore  Chart.yaml  values-argocd.yaml  values.yaml
charts/friendly-computing-machine/templates/: deployment.yaml  migration-job.yaml  slack_bot.yaml  subscribe.yaml  task_pool.yaml  worker.yaml
docs/: argocd-integration.md  manman_subscribe.md  microservices-architecture.md  slack_tokens.md  temporal-workflow-naming.md  youtube-live-monitor.md
examples/: temporal_naming_example.py
friendly_computing_machine/: __init__.py  util.py
friendly_computing_machine/bot/: cli.py  util.py
friendly_computing_machine/bot/task/: abstracttask.py  findteams.py
friendly_computing_machine/cli/: cli.py  util.py
friendly_computing_machine/db/: dal.py  db.py
migrations/: env.py
migrations/versions/: 2024_11_10_1522-92d6ff362a93_.py
src/friendly_computing_machine/: __init__.py  __main__.py  bot.py  cli.py  db.py  health.py  models.py  tmp.py  util.py
src/friendly_computing_machine/bot/: __init__.py  activity.py  app.py  bot.py  cli.py  event_handler.py  main.py  modal_builder.py  modal_schemas.py  slack_client.py  slack_enum.py  slack_models.py  slack_payloads.py  task.py  util.py  workflow.py
src/friendly_computing_machine/cli/: bot_cli.py  cli.py  main.py  mcp_cli.py  migration_cli.py  subscribe_cli.py  tools.py  tools_cli.py  util.py  workflow_cli.py
src/friendly_computing_machine/db/: cli.py  dal.py  db.py  job_activity.py  jobsql.py  util.py
src/friendly_computing_machine/gemini/: activity.py  ai.py
src/friendly_computing_machine/manman/: api.py  util.py
src/migrations/: env.py
tests/: README.md  conftest.py  final_validation_test.py  integration_test_runner.py  manual_test_runner.py  test_blocks.py  test_db.py  test_db_util.py  test_event_handler.py  test_fix_slack_tagging_activity.py  test_gemini.py  test_manman_subscribe.py  test_mcp.py  test_poll_integration.py  test_poll_workflow.py  test_scheduled_abstract_task.py  test_temporal_naming.py  test_temporal_workflow_fix.py  test_temporal_workflows.py  test_util.py  test_vibe_inversion.py  test_weirdge.py  test_youtube_workflow.py
tests/bot/: test_slack_models.py
tests/manman/: test_manman_util.py
(+81 files in other folders)
