[project]
name = "friendly-computing-machine"
version = "0.1.0"
description = "slackbot"
readme = "README.md"
authors = [
    { name = "qmastermoo", email = "alex.harding@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.3",
    "slack-bolt>=1.21.2",
    "sqlalchemy>=2.0.36",
    "sqlmodel>=0.0.22",
    "typer>=0.13.0",
]

[project.scripts]
fcm = "friendly_computing_machine:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
# addopts = "-ra -q"
testpaths = [
    "tests",
]
